--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,22 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+# Filesystem permissions
+fs_permissions = [{ access = "read", path = "db/" }]
+
+# Compilation
+solc_version = "0.8.24"
+optimizer = false
+via_ir = false
+
+# Testing
+fuzz = { runs = 256 }
+block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
+
+[fmt]
+line_length = 80
+int_types = "short"
+number_underscore = "preserve"
+ignore = []
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
