--- a/.github/workflows/invariants.yml
+++ b/.github/workflows/invariants.yml
@@ -12,7 +12,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-          token: ${{ secrets.GH_BOT }}
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
@@ -25,4 +24,6 @@ jobs:
 
       - name: Run invariants test suite
         run: forge test --match-contract "Invariants"
+        env:
+          RPC_URL: ${{ secrets.RPC_URL }}
         id: invariants
