--- a/.github/workflows/invariants.yml
+++ b/.github/workflows/invariants.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 6 * * *' # Run at 6:00 AM UTC every day
 
 jobs:
-  chaincheck:
+  invariants:
     runs-on: ubuntu-latest-m
 
     steps:
