--- a/.github/workflows/invariants.yml
+++ b/.github/workflows/invariants.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   ampleforth:
-    runs-on: ubuntu-latest-m
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -29,7 +29,7 @@ jobs:
         id: ampleforth
 
   forth-dao:
-    runs-on: ubuntu-latest-m
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
