--- a/.github/workflows/invariants.yml
+++ b/.github/workflows/invariants.yml
@@ -50,3 +50,26 @@ jobs:
         env:
           RPC_URL: ${{ secrets.RPC_URL }}
         id: forth-dao
+
+  spot:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
+      - name: Run Forge build
+        run: forge build
+        id: build
+
+      - name: Run invariants test suite
+        run: forge test --match-contract "SPOTInvariants"
+        env:
+          RPC_URL: ${{ secrets.RPC_URL }}
+        id: spot
